--- a/templates/index.html
+++ b/templates/index.html
@@ -11,14 +11,17 @@
 
 <body>
 	<div class="container">
-		<div class="header">
+		<div class="page-header">
 			<nav>
-				<ul class="nav nav-pills pull-right">
-					<li role="presentation" class="active"><a href="#">Home</a>
+				<ul class="nav nav-pills justify-content-end">
+					<li role="presentation" class="nav-item">
+						<a class="nav-link active" href="#">Home</a>
 					</li>
-					<li role="presentation"><a href="#">Sign In</a>
+					<li role="presentation" class="nav-item">
+						<a class="nav-link" href="#">Sign In</a>
 					</li>
-					<li role="presentation"><a href="ShowSignUp">Sign Up</a>
+					<li role="presentation" class="nav-item">
+						<a class="nav-link" href="ShowSignUp">Sign Up</a>
 					</li>
 				</ul>
 			</nav>
